[package]
name = "stress-storage-node"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "*"
ethereum-types = "0.14"
hex = "0.4"
hex-literal = "0.4"
structopt = "0.3"
serde = { version = "1", features = ["derive"] }